--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @import "tailwindcss";
+
+@theme {
+  --font-merriweather: "Merriweather", sans-serif; 
+  --font-playfairDisplay: "Playfair Display", sans-serif; 
+}
